add xml creator

--- a/UpdateCreator/UpdateCreator.csproj
+++ b/UpdateCreator/UpdateCreator.csproj
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -60,6 +60,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -80,7 +81,6 @@
     </ApplicationDefinition>
     <Compile Include="Models\CheckedFile.cs" />
     <Compile Include="Models\FileProvider.cs" />
-    <Compile Include="Models\Generator.cs" />
     <Compile Include="Models\PackageBuilder.cs" />
     <Compile Include="Models\Package.cs" />
     <Compile Include="Models\PackageEventArgs.cs" />
